--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,16 @@
       "source": "/(.*)",
       "destination": "/api/index"
     }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        }
+      ]
+    }
   ]
 }
